Basic Read List functionality done

--- a/chrome/android/chrome_java_sources.gni
+++ b/chrome/android/chrome_java_sources.gni
@@ -5,6 +5,7 @@
 chrome_java_sources = [
   "java/src/com/google/android/apps/chrome/appwidget/bookmarks/BookmarkThumbnailWidgetProvider.java",
   "java/src/org/chromium/chrome/browser/ActivityTabProvider.java",
+  "java/src/org/chromium/chrome/browser/AddReadingList.java",
   "java/src/org/chromium/chrome/browser/AfterStartupTaskUtils.java",
   "java/src/org/chromium/chrome/browser/AppHooks.java",
   "java/src/org/chromium/chrome/browser/AppHooksModule.java",
@@ -1423,6 +1424,12 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/provider/SearchColumns.java",
   "java/src/org/chromium/chrome/browser/push_messaging/PushMessagingServiceObserver.java",
   "java/src/org/chromium/chrome/browser/rappor/RapporServiceBridge.java",
+  "java/src/org/chromium/chrome/browser/readlist/RListActivity.java",
+  "java/src/org/chromium/chrome/browser/readlist/RListManagerUtils.java",
+  "java/src/org/chromium/chrome/browser/readlist/RListHelper.java",
+  "java/src/org/chromium/chrome/browser/readlist/ReadingListAdapter.java",
+  "java/src/org/chromium/chrome/browser/readlist/ReadingListModel.java",
+  "java/src/org/chromium/chrome/browser/readlist/ReadListListener.java",
   "java/src/org/chromium/chrome/browser/rlz/RevenueStats.java",
   "java/src/org/chromium/chrome/browser/rlz/RlzPingHandler.java",
   "java/src/org/chromium/chrome/browser/safe_browsing/FileTypePolicies.java",
